--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit
-alpaca-py==0.17.0
-pandas
-numpy
-matplotlib
-python-dotenv
+streamlit>=1.33.0
+pandas>=2.2.0
+numpy>=1.24.0
+matplotlib>=3.8.0
+ta==0.10.2
+alpaca-trade-api>=3.0.0
+requests>=2.31.0
+python-dateutil>=2.8.2
